--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-*******************************************************
-Bee -- 小蜜蜂 -- 采花于 Internet
-*******************************************************
+*******************
+Bee -- 小蜜蜂
+*******************
 
 :Author: ted@tcui.org
 :Created: 2010/03/24
